--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextjs-azuread-sharepoint-starter",
   "version": "1.0.0",
@@ -11,9 +10,11 @@
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^3.0.5",
+    "@prisma/client": "^6.15.0",
     "isomorphic-fetch": "^3.0.0",
     "next": "14.2.5",
     "next-auth": "4.24.7",
+    "prisma": "^6.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
